Obtain document lists pickles in notebook

--- a/notebooks/analyzing_hyperpartisan_documents.ipynb
+++ b/notebooks/analyzing_hyperpartisan_documents.ipynb
@@ -81,7 +81,7 @@
      "data": {
       "text/plain": "['/home/jfu08/PycharmProjects/AnalyzingHyperpartisanDocuments/notebooks/data/articles-validation-bypublisher-20181122.zip',\n '/home/jfu08/PycharmProjects/AnalyzingHyperpartisanDocuments/notebooks/data/ground-truth-validation-bypublisher-20181122.zip']"
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
     }
    },
    "id": "2d18f2f4f7c39d2",
-   "execution_count": 6
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -139,7 +139,7 @@
     }
    },
    "id": "c9ae201f259840e0",
-   "execution_count": 7
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -280,7 +280,7 @@
     }
    },
    "id": "a24e64b979b624ff",
-   "execution_count": 8
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -314,10 +314,14 @@
     "from src.utils import console_output_formatter"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-05T10:57:27.865281Z",
+     "start_time": "2024-04-05T10:57:27.591180Z"
+    }
    },
    "id": "f05a50263e1a8c3f",
-   "execution_count": null
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -331,12 +335,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-04-05T10:58:08.534489Z",
+     "start_time": "2024-04-05T10:57:33.925948Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "###########################\n",
+      "#                         #\n",
+      "#     DATA FORMATTING     #\n",
+      "#                         #\n",
+      "###########################\n",
+      "\n",
+      "Extracting XML data from zip files ...\n",
+      "Extracting file articles-validation-bypublisher-20181122.zip ...\n",
+      "File articles-validation-bypublisher-20181122.zip extracted\n",
+      "Extracting file ground-truth-validation-bypublisher-20181122.zip ...\n",
+      "File ground-truth-validation-bypublisher-20181122.zip extracted\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Getting ground truth values ...: 100%|██████████| 150000/150000 [00:00<00:00, 281905.20it/s]\n",
+      "Extracting text from articles ...: 100%|██████████| 150000/150000 [00:24<00:00, 6011.95it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "console_output_formatter.print_section_header(section_header='Data formatting')\n",
     "hyperpartisan_documents_formatter = HyperpartisanDocumentsFormatter()\n",
@@ -355,7 +401,62 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "########################################\n",
+      "#                                      #\n",
+      "#     DATA LOADING / PREPROCESSING     #\n",
+      "#                                      #\n",
+      "########################################\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Getting clean documents from txt files for HYPERPARTISAN ...: 100%|██████████| 75000/75000 [03:50<00:00, 325.56it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clean document list (HYPERPARTISAN) loaded successfully.\n",
+      "Saving HYPERPARTISAN document list into pickle file ...\n",
+      "Pickle file saved. \n",
+      "\n",
+      "DOCUMENT LIST STATISTICS (HYPERPARTISAN):\n",
+      "Number of documents: 75000\n",
+      "Document sample after performing preprocessing:\n",
+      "['pro-life', 'students', 'wilfrid', 'laurier', 'university', 'say', 'longer', 'able', 'put', 'pro-life', 'flag', 'display', ',', 'campus', 'leaders', 'explaining', 'exhibits', 'traumatic', 'one', 'last', 'fall', 'caused', 'uproar', 'canadian', 'campus', '.', 'display', 'used', '10,000', 'pink', 'blue', 'flags', 'represent', '100,000', 'abortions', 'year', 'canada', '.', 'student', 'union', 'president', 'tyler', 'van', 'herzele', ',', 'letter', 'shared', 'campuswide', ',', 'stated', '“', 'visceral', 'nature', 'display', 'interfered', 'ability', 'members', 'laurier', 'community', 'safely', 'attend', 'class', ',', 'travel', 'work', 'remain', 'campus', 'study.', '”', '“', 'adversarial', 'tone', 'event', 'evoked', 'confrontation', 'eliminated', 'possibility', 'respectful', 'dialogue', 'created', 'unsafe', 'environment', 'students.', '”', 'according', 'december', '2016', 'letter', ',', 'several', 'offices', ',', 'including', 'diversity', 'equity', 'office', ',', 'worked', 'together', '“', 'ensure', 'happen', 'again.', '”', 'email', 'college', 'fix', 'month', ',', 'campus', 'spokesman', 'kevin', 'crowley', 'echoed', 'sentiments', '.', 'noted', 'university', '“', 'firmly', 'upholds', 'principles', 'free', 'speech', 'strives', 'provide', 'environment', 'protects', 'right', 'people', 'engage', 'critical', 'respectful', 'dialogue.', '”', ',', 'added', ',', '“', 'must', ',', 'however', ',', 'balance', 'exercise', 'free', 'speech', 'need', 'support', 'individuals', 'may', 'experienced', 'harm', 'related', 'specific', 'topic', 'discussed.', '”', 'display', 'question', 'project', 'school', '’', 'lifelink', 'group', '.', 'set', 'october', 'quad', ',', 'approval', 'student', 'union', '.', 'earlier', 'month', ',', 'christine', 'schuknecht', ',', 'student', 'university', '’', 'waterloo', 'campus', 'member', 'lifelink', ',', 'wrote', 'national', 'post', 'led', 'display', 'banned', '.', 'flags', 'several', 'hours', ',', 'students', 'university', 'employees', 'took', 'action', ',', 'according', 'schuknect', '.', 'diversity', 'equity', 'office', 'placed', 'sign', 'display', 'reading', '“', 'warning', ':', 'anti-choice', 'display', 'ahead.', '”', 'special', 'constable', 'services', 'called', 'students', 'vandalized', 'flags', 'club', 'banner', 'yelled', 'lifelink', 'members', '.', 'constables', 'see', 'issue', 'display', 'commended', 'members', ',', 'wrote', '.', 'schuknect', 'explains', '“', 'dumbfounded.', '”', 'diversity', 'equity', 'office', ',', 'wrote', ',', 'supposed', '“', 'non-partisan', ',', '”', 'used', '“', 'anti-choice', '”', 'describe', 'club', '.', '“', 'deo', 'hangs', 'posters', 'across', 'campus', 'insisting', 'students', 'use', '‘', 'proper', 'terms', '’', 'addressing', 'groups', 'explicitly', 'supports', ',', 'went', 'way', 'apply', 'negatively', 'torqued', 'label', ',', '”', 'schuknect', 'wrote', '.', 'jonah', 'vanleeuwen', ',', 'group', '’', 'vice-president', ',', 'echoed', 'sentiments', 'surprise', 'disappointment', '.', '“', 'disappointed', 'see', 'despite', 'efforts', 'stay', 'peaceful', 'reserved', ',', 'group', 'using', 'violent', 'tactics', 'raised', 'pedestal', ',', '”', 'said', 'email', 'college', 'fix', '.', 'students', 'spoke', 'display', 'ways', '.', 'cord', ',', 'campus', 'newspaper', ',', 'published', '“', 'anti-abortion', 'demonstration', 'quad', ',', '”', 'wrote', 'university', '“', 'surprised', '”', 'see', 'flags', '.', 'article', 'included', 'statements', 'daniel', 'quintia', ',', 'third-year', 'student', 'admitted', 'pulling', 'flags', ',', 'saying', '“', 'frankly', 'kind', 'pissed.', '”', 'diversity', 'equity', 'office', 'referred', 'college', 'fix', 'student', 'union', 'emailed', 'comment', '.', 'van', 'herzele', 'failed', 'respond', 'emails', 'phone', 'calls', 'fix', '.', ':', '&', '#', '160', ';', 'washington', 'state', 'student', 'tears', 'pro-life', 'display', '‘', 'really', 'made', 'angry', '’', ':', 'student', 'pro-life', 'display', 'casually', 'vandalized', 'broad', 'daylight', 'cu-boulder', 'like', 'college', 'fix', 'facebook', '/', 'follow', 'us', 'twitter'] \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Getting clean documents from txt files for NON-HYPERPARTISAN ...: 100%|██████████| 75000/75000 [05:51<00:00, 213.24it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clean document list (NON-HYPERPARTISAN) loaded successfully.\n",
+      "Saving NON-HYPERPARTISAN document list into pickle file ...\n",
+      "Pickle file saved. \n",
+      "\n",
+      "DOCUMENT LIST STATISTICS (NON-HYPERPARTISAN):\n",
+      "Number of documents: 75000\n",
+      "Document sample after performing preprocessing:\n",
+      "['chief', 'juvenile', 'probation', 'officer', 'gwendolyn', 'tucker', ',', 'charge', 'city', 'department', 'incarcerates', 'attempts', 'rehabilitate', 'thousands', 'children', 'accused', 'committing', 'crimes', ',', 'facing', 'flood', 'criticism', 'youth', 'advocates', ',', 'staff', 'juvenile', 'probation', 'commissioners', 'considering', 'whether', 'fire', '.', 'juvenile', 'probation', 'commission', 'held', 'emergency', 'meeting', 'monday', 'lasted', 'long', 'night', 'reconvening', 'today', 'discuss', 'tucker', \"'s\", 'fate', '.', 'tucker', ',', 'promoted', 'assistant', 'chief', 'last', 'summer', 'then-', 'chief', 'jesse', 'williams', 'quit', ',', 'accused', 'ignoring', 'gas', 'leaks', 'fire', 'hazards', 'log', 'cabin', 'ranch', 'boys', ',', 'working', 'hard', 'enough', 'send', 'youths', 'community', 'rehabilitation', 'programs', 'rather', 'juvenile', 'hall', 'lockup', ',', 'clashing', 'staff', '.', 'tucker', 'publicly', 'answered', 'accusers', 'referred', 'questions', ',', 'including', 'past', 'present', 'gas', 'leaks', 'operational', 'issues', ',', 'private', 'attorney', ',', 'gregg', 'adam', '.', 'adam', 'said', 'tucker', 'meet', 'behind', 'closed', 'doors', 'commissioners', 'sometime', 'today', \"'s\", 'meeting', '.', '``', 'respond', 'commission', ',', \"''\", 'adam', 'said', '.', '``', \"'s\", 'appropriate', 'respond', 'publicly', '.', \"''\", 'possible', 'shakeup', 'juvenile', 'probation', 'department', 'one', 'controversy', 'department', 'struggled', 'youth', 'advocates', 'say', 'one', 'highest', 'incarceration', 'rates', 'state', '.', 'two', 'major', 'reform', 'efforts', 'since', '1996', 'reduce', 'number', 'minors', 'lockup', 'sending', 'low-risk', 'offenders', 'community', 'programs', '.', 'watchdogs', 'said', 'efforts', 'made', 'little', 'impact', '.', '``', 'takes', 'dedicated', ',', 'willful', 'leadership', ',', 'kind', 'leadership', 'might', 'find', 'outside', 'san', 'francisco', ',', \"''\", 'said', 'andrea', 'shorter', ',', 'deputy', 'executive', 'director', 'center', 'juvenile', 'criminal', 'justice', ',', 'think', 'tank', 'lobbying', 'group', 'advocates', 'rehabilitation', 'programs', 'rather', 'incarceration', '.', 'year', 'ago', ',', 'juvenile', 'probation', 'department', 'adopted', 'new', 'intake', 'questionnaire', 'meant', 'help', 'probation', 'officers', 'determine', 'whether', 'recently', 'arrested', 'children', 'locked', 'awaiting', 'court', 'date', 'released', 'community', 'program', '.', 'kids', 'graded', 'according', 'severity', 'alleged', 'crime', ',', 'history', 'flight', 'risk', '.', 'ntanya', 'lee', 'coleman', 'advocates', 'children', 'youth', 'said', '93', 'percent', 'arrested', 'juveniles', 'incarcerated', 'new', 'intake', 'procedure', 'adopted', '.', 'year', 'later', ',', 'said', ',', 'kids', 'considered', 'low', 'risk', 'still', 'locked', 'probation', 'officers', 'ignoring', 'new', 'system', '.', 'lee', 'said', 'mayor', 'gavin', 'newsom', 'made', 'campaign', 'promise', 'appoint', 'new', 'chief', ',', 'still', 'waiting', '.', 'mayor', 'slowly', 'replacing', 'department', 'heads', 'since', 'took', 'office', 'seven', 'months', 'ago', '.', 'juvenile', 'probation', 'commission', 'might', 'move', 'ahead', 'without', '.', 'monday', \"'s\", 'commission', 'meeting', ',', 'lee', 'joined', 'watchdogs', 'employees', 'testified', 'tucker', \"'s\", 'job', 'performance', '.', 'tucker', \"'s\", 'supporters', 'included', 'director', 'special', 'programs', 'youth', ',', 'declined', 'interviewed', 'later', '.', 'mercedes', 'hernandez-bran', ',', 'department', \"'s\", 'human', 'resources', 'director', ',', 'told', 'commission', 'since', 'december', 'tried', 'alert', 'tucker', 'staff', 'gas', 'leaks', 'fires', 'kitchen', 'laundry', 'room', 'log', 'cabin', 'ranch', ',', 'residential', 'program', 'la', 'honda', '.', 'hernandez-bran', 'alleged', 'warnings', 'pushed', 'aside', '.', 'longtime', 'cook', 'jeff', 'hatton', ',', \"n't\", 'attend', 'meeting', ',', 'told', 'chronicle', 'always', 'smells', 'gas', 'leak', 'last', 'week', 'resulted', 'small', 'fire', '.', 'la', 'honda', 'volunteer', 'fire', 'chief', 'larry', 'whitney', 'said', 'crew', 'responded', 'six', 'calls', 'ranch', 'since', 'november', ',', 'one', 'incident', 'included', 'gas', 'leak', 'administration', 'building', '.', 'said', 'although', 'calls', 'usual', ',', 'none', 'incidents', 'significant', '.', 'meanwhile', ',', 'tucker', 'attorney', 'awaiting', 'commission', \"'s\", 'next', 'move', '.', 'adam', 'said', 'argue', 'labor', 'laws', 'peace', 'officers', 'afford', 'right', 'appeal', 'dismissal', ',', \"'s\", 'coming', '.'] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "console_output_formatter.print_section_header(section_header='Data loading / preprocessing')\n",
     "hyperpartisan_documents_processor = HyperpartisanDocumentsProcessor()\n",
@@ -377,10 +478,14 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-05T11:09:35.048551Z",
+     "start_time": "2024-04-05T10:59:26.957481Z"
+    }
    },
    "id": "8a7357046fa1e25e",
-   "execution_count": null
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
