Calculate log-odd ratios in notebook

--- a/notebooks/analyzing_hyperpartisan_documents.ipynb
+++ b/notebooks/analyzing_hyperpartisan_documents.ipynb
@@ -316,8 +316,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-05T10:57:27.865281Z",
-     "start_time": "2024-04-05T10:57:27.591180Z"
+     "end_time": "2024-04-05T11:16:59.008053Z",
+     "start_time": "2024-04-05T11:16:58.564536Z"
     }
    },
    "id": "f05a50263e1a8c3f",
@@ -410,44 +410,19 @@
       "#                                      #\n",
       "#     DATA LOADING / PREPROCESSING     #\n",
       "#                                      #\n",
-      "########################################\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Getting clean documents from txt files for HYPERPARTISAN ...: 100%|██████████| 75000/75000 [03:50<00:00, 325.56it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Clean document list (HYPERPARTISAN) loaded successfully.\n",
-      "Saving HYPERPARTISAN document list into pickle file ...\n",
-      "Pickle file saved. \n",
+      "########################################\n",
+      "\n",
+      "The HYPERPARTISAN document list already exists. Loading it from pickle file ...\n",
+      "Clean document list (HYPERPARTISAN) loaded successfully. \n",
       "\n",
       "DOCUMENT LIST STATISTICS (HYPERPARTISAN):\n",
       "Number of documents: 75000\n",
       "Document sample after performing preprocessing:\n",
-      "['pro-life', 'students', 'wilfrid', 'laurier', 'university', 'say', 'longer', 'able', 'put', 'pro-life', 'flag', 'display', ',', 'campus', 'leaders', 'explaining', 'exhibits', 'traumatic', 'one', 'last', 'fall', 'caused', 'uproar', 'canadian', 'campus', '.', 'display', 'used', '10,000', 'pink', 'blue', 'flags', 'represent', '100,000', 'abortions', 'year', 'canada', '.', 'student', 'union', 'president', 'tyler', 'van', 'herzele', ',', 'letter', 'shared', 'campuswide', ',', 'stated', '“', 'visceral', 'nature', 'display', 'interfered', 'ability', 'members', 'laurier', 'community', 'safely', 'attend', 'class', ',', 'travel', 'work', 'remain', 'campus', 'study.', '”', '“', 'adversarial', 'tone', 'event', 'evoked', 'confrontation', 'eliminated', 'possibility', 'respectful', 'dialogue', 'created', 'unsafe', 'environment', 'students.', '”', 'according', 'december', '2016', 'letter', ',', 'several', 'offices', ',', 'including', 'diversity', 'equity', 'office', ',', 'worked', 'together', '“', 'ensure', 'happen', 'again.', '”', 'email', 'college', 'fix', 'month', ',', 'campus', 'spokesman', 'kevin', 'crowley', 'echoed', 'sentiments', '.', 'noted', 'university', '“', 'firmly', 'upholds', 'principles', 'free', 'speech', 'strives', 'provide', 'environment', 'protects', 'right', 'people', 'engage', 'critical', 'respectful', 'dialogue.', '”', ',', 'added', ',', '“', 'must', ',', 'however', ',', 'balance', 'exercise', 'free', 'speech', 'need', 'support', 'individuals', 'may', 'experienced', 'harm', 'related', 'specific', 'topic', 'discussed.', '”', 'display', 'question', 'project', 'school', '’', 'lifelink', 'group', '.', 'set', 'october', 'quad', ',', 'approval', 'student', 'union', '.', 'earlier', 'month', ',', 'christine', 'schuknecht', ',', 'student', 'university', '’', 'waterloo', 'campus', 'member', 'lifelink', ',', 'wrote', 'national', 'post', 'led', 'display', 'banned', '.', 'flags', 'several', 'hours', ',', 'students', 'university', 'employees', 'took', 'action', ',', 'according', 'schuknect', '.', 'diversity', 'equity', 'office', 'placed', 'sign', 'display', 'reading', '“', 'warning', ':', 'anti-choice', 'display', 'ahead.', '”', 'special', 'constable', 'services', 'called', 'students', 'vandalized', 'flags', 'club', 'banner', 'yelled', 'lifelink', 'members', '.', 'constables', 'see', 'issue', 'display', 'commended', 'members', ',', 'wrote', '.', 'schuknect', 'explains', '“', 'dumbfounded.', '”', 'diversity', 'equity', 'office', ',', 'wrote', ',', 'supposed', '“', 'non-partisan', ',', '”', 'used', '“', 'anti-choice', '”', 'describe', 'club', '.', '“', 'deo', 'hangs', 'posters', 'across', 'campus', 'insisting', 'students', 'use', '‘', 'proper', 'terms', '’', 'addressing', 'groups', 'explicitly', 'supports', ',', 'went', 'way', 'apply', 'negatively', 'torqued', 'label', ',', '”', 'schuknect', 'wrote', '.', 'jonah', 'vanleeuwen', ',', 'group', '’', 'vice-president', ',', 'echoed', 'sentiments', 'surprise', 'disappointment', '.', '“', 'disappointed', 'see', 'despite', 'efforts', 'stay', 'peaceful', 'reserved', ',', 'group', 'using', 'violent', 'tactics', 'raised', 'pedestal', ',', '”', 'said', 'email', 'college', 'fix', '.', 'students', 'spoke', 'display', 'ways', '.', 'cord', ',', 'campus', 'newspaper', ',', 'published', '“', 'anti-abortion', 'demonstration', 'quad', ',', '”', 'wrote', 'university', '“', 'surprised', '”', 'see', 'flags', '.', 'article', 'included', 'statements', 'daniel', 'quintia', ',', 'third-year', 'student', 'admitted', 'pulling', 'flags', ',', 'saying', '“', 'frankly', 'kind', 'pissed.', '”', 'diversity', 'equity', 'office', 'referred', 'college', 'fix', 'student', 'union', 'emailed', 'comment', '.', 'van', 'herzele', 'failed', 'respond', 'emails', 'phone', 'calls', 'fix', '.', ':', '&', '#', '160', ';', 'washington', 'state', 'student', 'tears', 'pro-life', 'display', '‘', 'really', 'made', 'angry', '’', ':', 'student', 'pro-life', 'display', 'casually', 'vandalized', 'broad', 'daylight', 'cu-boulder', 'like', 'college', 'fix', 'facebook', '/', 'follow', 'us', 'twitter'] \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Getting clean documents from txt files for NON-HYPERPARTISAN ...: 100%|██████████| 75000/75000 [05:51<00:00, 213.24it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Clean document list (NON-HYPERPARTISAN) loaded successfully.\n",
-      "Saving NON-HYPERPARTISAN document list into pickle file ...\n",
-      "Pickle file saved. \n",
+      "['pro-life', 'students', 'wilfrid', 'laurier', 'university', 'say', 'longer', 'able', 'put', 'pro-life', 'flag', 'display', ',', 'campus', 'leaders', 'explaining', 'exhibits', 'traumatic', 'one', 'last', 'fall', 'caused', 'uproar', 'canadian', 'campus', '.', 'display', 'used', '10,000', 'pink', 'blue', 'flags', 'represent', '100,000', 'abortions', 'year', 'canada', '.', 'student', 'union', 'president', 'tyler', 'van', 'herzele', ',', 'letter', 'shared', 'campuswide', ',', 'stated', '“', 'visceral', 'nature', 'display', 'interfered', 'ability', 'members', 'laurier', 'community', 'safely', 'attend', 'class', ',', 'travel', 'work', 'remain', 'campus', 'study.', '”', '“', 'adversarial', 'tone', 'event', 'evoked', 'confrontation', 'eliminated', 'possibility', 'respectful', 'dialogue', 'created', 'unsafe', 'environment', 'students.', '”', 'according', 'december', '2016', 'letter', ',', 'several', 'offices', ',', 'including', 'diversity', 'equity', 'office', ',', 'worked', 'together', '“', 'ensure', 'happen', 'again.', '”', 'email', 'college', 'fix', 'month', ',', 'campus', 'spokesman', 'kevin', 'crowley', 'echoed', 'sentiments', '.', 'noted', 'university', '“', 'firmly', 'upholds', 'principles', 'free', 'speech', 'strives', 'provide', 'environment', 'protects', 'right', 'people', 'engage', 'critical', 'respectful', 'dialogue.', '”', ',', 'added', ',', '“', 'must', ',', 'however', ',', 'balance', 'exercise', 'free', 'speech', 'need', 'support', 'individuals', 'may', 'experienced', 'harm', 'related', 'specific', 'topic', 'discussed.', '”', 'display', 'question', 'project', 'school', '’', 'lifelink', 'group', '.', 'set', 'october', 'quad', ',', 'approval', 'student', 'union', '.', 'earlier', 'month', ',', 'christine', 'schuknecht', ',', 'student', 'university', '’', 'waterloo', 'campus', 'member', 'lifelink', ',', 'wrote', 'national', 'post', 'led', 'display', 'banned', '.', 'flags', 'several', 'hours', ',', 'students', 'university', 'employees', 'took', 'action', ',', 'according', 'schuknect', '.', 'diversity', 'equity', 'office', 'placed', 'sign', 'display', 'reading', '“', 'warning', ':', 'anti-choice', 'display', 'ahead.', '”', 'special', 'constable', 'services', 'called', 'students', 'vandalized', 'flags', 'club', 'banner', 'yelled', 'lifelink', 'members', '.', 'constables', 'see', 'issue', 'display', 'commended', 'members', ',', 'wrote', '.', 'schuknect', 'explains', '“', 'dumbfounded.', '”', 'diversity', 'equity', 'office', ',', 'wrote', ',', 'supposed', '“', 'non-partisan', ',', '”', 'used', '“', 'anti-choice', '”', 'describe', 'club', '.', '“', 'deo', 'hangs', 'posters', 'across', 'campus', 'insisting', 'students', 'use', '‘', 'proper', 'terms', '’', 'addressing', 'groups', 'explicitly', 'supports', ',', 'went', 'way', 'apply', 'negatively', 'torqued', 'label', ',', '”', 'schuknect', 'wrote', '.', 'jonah', 'vanleeuwen', ',', 'group', '’', 'vice-president', ',', 'echoed', 'sentiments', 'surprise', 'disappointment', '.', '“', 'disappointed', 'see', 'despite', 'efforts', 'stay', 'peaceful', 'reserved', ',', 'group', 'using', 'violent', 'tactics', 'raised', 'pedestal', ',', '”', 'said', 'email', 'college', 'fix', '.', 'students', 'spoke', 'display', 'ways', '.', 'cord', ',', 'campus', 'newspaper', ',', 'published', '“', 'anti-abortion', 'demonstration', 'quad', ',', '”', 'wrote', 'university', '“', 'surprised', '”', 'see', 'flags', '.', 'article', 'included', 'statements', 'daniel', 'quintia', ',', 'third-year', 'student', 'admitted', 'pulling', 'flags', ',', 'saying', '“', 'frankly', 'kind', 'pissed.', '”', 'diversity', 'equity', 'office', 'referred', 'college', 'fix', 'student', 'union', 'emailed', 'comment', '.', 'van', 'herzele', 'failed', 'respond', 'emails', 'phone', 'calls', 'fix', '.', ':', '&', '#', '160', ';', 'washington', 'state', 'student', 'tears', 'pro-life', 'display', '‘', 'really', 'made', 'angry', '’', ':', 'student', 'pro-life', 'display', 'casually', 'vandalized', 'broad', 'daylight', 'cu-boulder', 'like', 'college', 'fix', 'facebook', '/', 'follow', 'us', 'twitter'] \n",
+      "\n",
+      "\n",
+      "The NON-HYPERPARTISAN document list already exists. Loading it from pickle file ...\n",
+      "Clean document list (NON-HYPERPARTISAN) loaded successfully. \n",
       "\n",
       "DOCUMENT LIST STATISTICS (NON-HYPERPARTISAN):\n",
       "Number of documents: 75000\n",
@@ -480,8 +455,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-05T11:09:35.048551Z",
-     "start_time": "2024-04-05T10:59:26.957481Z"
+     "end_time": "2024-04-05T11:17:09.074645Z",
+     "start_time": "2024-04-05T11:17:01.547350Z"
     }
    },
    "id": "8a7357046fa1e25e",
@@ -499,7 +474,19 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating unigrams frequency for the whole corpus ...\n",
+      "Unigrams frequency calculated successfully. \n",
+      "\n",
+      "Removing infrequent words from the corpus ...\n",
+      "Infrequent words removed successfully. \n"
+     ]
+    }
+   ],
    "source": [
     "hyperpartisan_document_list, non_hyperpartisan_document_list = (hyperpartisan_documents_processor.\n",
     "    remove_infrequent_words(\n",
@@ -509,10 +496,14 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-05T11:17:36.355315Z",
+     "start_time": "2024-04-05T11:17:13.287889Z"
+    }
    },
    "id": "95c84fdd62ba6cb",
-   "execution_count": null
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -536,7 +527,48 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "####################################################\n",
+      "#                                                  #\n",
+      "#     LOG-ODD RATIOS CALCULATION (ON UNIGRAMS)     #\n",
+      "#                                                  #\n",
+      "####################################################\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Calculating unigrams frequency for HYPERPARTISAN ...: 100%|██████████| 75000/75000 [00:06<00:00, 12182.48it/s]\n",
+      "Calculating unigrams frequency for NON-HYPERPARTISAN ...: 100%|██████████| 75000/75000 [00:10<00:00, 7410.57it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Calculating o values for HYPERPARTISAN ...\n",
+      "o values calculated successfully.\n",
+      "Highest values: {',': 0.07904558812222764, '.': 0.05905167566126709, '’': 0.017834360472030117, ';': 0.010282649671985545, '”': 0.009157323635250748, '“': 0.0091371932147936, '&': 0.008775418331800382, '#': 0.008418050626064075, '160': 0.008213163032176257, \"'s\": 0.006635610382607333, ':': 0.006315486901737, \"''\": 0.004601259868295875, ')': 0.004290455344636663, '(': 0.004171680981721613, '``': 0.004038930885589468, 'people': 0.0035832291148293633, '?': 0.0035464001595223124, 'would': 0.003481079941100117, 'one': 0.003438485628349947, 'trump': 0.0033961246759758932} ... \n",
+      "\n",
+      "Calculating o values for NON-HYPERPARTISAN ...\n",
+      "o values calculated successfully.\n",
+      "Highest values: {',': 0.07733586360719497, '.': 0.0575189046097237, '’': 0.018772515090338244, ';': 0.01231004804516985, '&': 0.010770717754870098, '#': 0.010621687172105558, '160': 0.010550057423716536, ':': 0.007379839242451155, '“': 0.007092393923448603, '”': 0.007022978551785377, ')': 0.00474326302337323, '(': 0.004657798952314943, 'would': 0.0037745680863692553, 'one': 0.0035444432459048035, 'said': 0.00330193999373926, \"'s\": 0.0031829923915563875, '?': 0.002821582368864001, '``': 0.0028024361474838326, \"''\": 0.0027572707855005175, 'new': 0.0026154377739706345} ... \n",
+      "\n",
+      "\n",
+      "Calculating log-odd ratios ...\n",
+      "Log-odd ratios calculated successfully.\n",
+      "Saving log-odd ratios into a pickle file ...\n",
+      "Pickle file saved. \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "console_output_formatter.print_section_header(section_header='Log-odd ratios calculation (on unigrams)')\n",
     "log_odd_ratios_calculator = LogOddRatiosCalculator(\n",
@@ -548,10 +580,14 @@
     "log_odd_ratios_calculator.calculate_log_odd_ratios()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-05T11:18:05.856482Z",
+     "start_time": "2024-04-05T11:17:49.194881Z"
+    }
    },
    "id": "1af600cb14956991",
-   "execution_count": null
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -565,7 +601,46 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "###################################################\n",
+      "#                                                 #\n",
+      "#     LOG-ODD RATIOS CALCULATION (ON BIGRAMS)     #\n",
+      "#                                                 #\n",
+      "###################################################\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Calculating bigrams frequency for HYPERPARTISAN ...: 100%|██████████| 75000/75000 [00:28<00:00, 2668.83it/s]\n",
+      "Calculating bigrams frequency for NON-HYPERPARTISAN ...: 100%|██████████| 75000/75000 [00:59<00:00, 1254.03it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Calculating o values for HYPERPARTISAN ...\n",
+      "o values calculated successfully.\n",
+      "Highest values: {('#', '160'): 0.008207190205724578, ('&', '#'): 0.00820713221746512, ('160', ';'): 0.00820713221746512, ('.', '’'): 0.002100346182670835, (',', '”'): 0.0019771636865404305, (',', '’'): 0.0018951256541697179, ('.', '“'): 0.0017713638492958578, ('.', \"''\"): 0.0014065261258350292, (',', '“'): 0.0012648976549313271, ('.', '``'): 0.0011852349477046455, (',', \"''\"): 0.001079142535134596, ('.', ','): 0.000984561713714705, (';', '&'): 0.0009715578911369213, ('.', \"'s\"): 0.0009260614611197653, (',', ','): 0.0008269952913596135, ('united', 'states'): 0.000720864523626125, (')', ','): 0.0007113809853931122, ('.', '&'): 0.0007063536404343701, (')', '.'): 0.0006886155143177224, ('said', '.'): 0.0006643658569952778} ... \n",
+      "\n",
+      "Calculating o values for NON-HYPERPARTISAN ...\n",
+      "o values calculated successfully.\n",
+      "Highest values: {('&', '#'): 0.010543000855111064, ('#', '160'): 0.010543000855111064, ('160', ';'): 0.010543000855111064, ('united', 'states'): 0.0019144677464473668, ('.', '’'): 0.0019107621931039663, (';', '&'): 0.0018193733034120782, (',', '’'): 0.0016455303904380264, (',', '”'): 0.0016154465644066566, ('.', '“'): 0.0015252606474666795, ('.', '``'): 0.001107651189108016, ('.', \"''\"): 0.001028799393037847, ('.', ','): 0.0010214378533502557, (',', \"''\"): 0.0008967818831422151, (')', '.'): 0.0008918997614162679, ('.', '&'): 0.0008830829159892936, (',', '“'): 0.0008365784485620185, (',', ','): 0.0007700261064200356, (')', ','): 0.0007313992089780708, ('said', '.'): 0.0007165028807149903, ('.', ':'): 0.0007061776909174143} ... \n",
+      "\n",
+      "Calculating log-odd ratios ...\n",
+      "Log-odd ratios calculated successfully.\n",
+      "Saving log-odd ratios into a pickle file ...\n",
+      "Pickle file saved. \n"
+     ]
+    }
+   ],
    "source": [
     "console_output_formatter.print_section_header(section_header='Log-odd ratios calculation (on bigrams)')\n",
     "log_odd_ratios_calculator = LogOddRatiosCalculator(\n",
@@ -577,10 +652,14 @@
     "log_odd_ratios_calculator.calculate_log_odd_ratios()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-05T11:21:00.653922Z",
+     "start_time": "2024-04-05T11:18:28.357951Z"
+    }
    },
    "id": "a6ce3689503af028",
-   "execution_count": null
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
