--- a/notebooks/obtain_log-odd_ratios.ipynb
+++ b/notebooks/obtain_log-odd_ratios.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Analyzing Hyperpartisan Documents"
+    "# Analyzing Hyperpartisan Documents (Obtain Most Relevant Tokens)"
    ],
    "metadata": {
     "collapsed": false
@@ -285,7 +285,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 2. Perform Hyperpartisan Documents Analysis "
+    "## 2. Obtain Most Relevant Tokens"
    ],
    "metadata": {
     "collapsed": false
@@ -316,8 +316,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-05T11:27:00.292451Z",
-     "start_time": "2024-04-05T11:26:59.931567Z"
+     "end_time": "2024-04-05T12:56:50.434617Z",
+     "start_time": "2024-04-05T12:56:50.091458Z"
     }
    },
    "id": "f05a50263e1a8c3f",
@@ -712,11 +712,11 @@
    ],
    "source": [
     "console_output_formatter.print_section_header(section_header='Most relevant words extraction (on unigrams)')\n",
-    "log_odd_ratios_analyzer = LogOddRatiosAnalyzer(token_type=TokenType.UNIGRAM)\n",
+    "log_odd_ratios_analyzer_on_unigrams = LogOddRatiosAnalyzer(token_type=TokenType.UNIGRAM)\n",
     "\n",
-    "hyperpartisan_most_relevant_words_on_unigrams = (log_odd_ratios_analyzer.get_most_relevant_words(document_type=DocumentType.HYPERPARTISAN))\n",
+    "hyperpartisan_most_relevant_words_on_unigrams = (log_odd_ratios_analyzer_on_unigrams.get_most_relevant_words(document_type=DocumentType.HYPERPARTISAN))\n",
     "print(f'{hyperpartisan_most_relevant_words_on_unigrams} \\n')\n",
-    "hyperpartisan_most_relevant_words_not_inf_on_unigrams = (log_odd_ratios_analyzer.\n",
+    "hyperpartisan_most_relevant_words_not_inf_on_unigrams = (log_odd_ratios_analyzer_on_unigrams.\n",
     "    get_most_relevant_words(\n",
     "        document_type=DocumentType.HYPERPARTISAN,\n",
     "        infinite_values=False\n",
@@ -724,9 +724,9 @@
     ")\n",
     "print(f'{hyperpartisan_most_relevant_words_not_inf_on_unigrams} \\n\\n')\n",
     "\n",
-    "non_hyperpartisan_most_relevant_words_on_unigrams = (log_odd_ratios_analyzer.get_most_relevant_words(document_type=DocumentType.NON_HYPERPARTISAN))\n",
+    "non_hyperpartisan_most_relevant_words_on_unigrams = (log_odd_ratios_analyzer_on_unigrams.get_most_relevant_words(document_type=DocumentType.NON_HYPERPARTISAN))\n",
     "print(f'{non_hyperpartisan_most_relevant_words_on_unigrams} \\n')\n",
-    "non_hyperpartisan_most_relevant_words_not_inf_on_unigrams = (log_odd_ratios_analyzer.\n",
+    "non_hyperpartisan_most_relevant_words_not_inf_on_unigrams = (log_odd_ratios_analyzer_on_unigrams.\n",
     "    get_most_relevant_words(\n",
     "        document_type=DocumentType.NON_HYPERPARTISAN,\n",
     "        infinite_values=False\n",
@@ -737,8 +737,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-05T11:27:10.249471Z",
-     "start_time": "2024-04-05T11:27:09.933663Z"
+     "end_time": "2024-04-05T12:57:01.362852Z",
+     "start_time": "2024-04-05T12:57:01.118277Z"
     }
    },
    "id": "b1956f6e9f479358",
@@ -787,11 +787,11 @@
    ],
    "source": [
     "console_output_formatter.print_section_header(section_header='Most relevant words extraction (on bigrams)')\n",
-    "log_odd_ratios_analyzer = LogOddRatiosAnalyzer(token_type=TokenType.BIGRAM)\n",
+    "log_odd_ratios_analyzer_on_bigrams = LogOddRatiosAnalyzer(token_type=TokenType.BIGRAM)\n",
     "\n",
-    "hyperpartisan_most_relevant_words_on_bigrams = (log_odd_ratios_analyzer.get_most_relevant_words(document_type=DocumentType.HYPERPARTISAN))\n",
+    "hyperpartisan_most_relevant_words_on_bigrams = (log_odd_ratios_analyzer_on_bigrams.get_most_relevant_words(document_type=DocumentType.HYPERPARTISAN))\n",
     "print(f'{hyperpartisan_most_relevant_words_on_bigrams} \\n')\n",
-    "hyperpartisan_most_relevant_words_not_inf_on_bigrams = (log_odd_ratios_analyzer.\n",
+    "hyperpartisan_most_relevant_words_not_inf_on_bigrams = (log_odd_ratios_analyzer_on_bigrams.\n",
     "    get_most_relevant_words(\n",
     "        document_type=DocumentType.HYPERPARTISAN,\n",
     "        infinite_values=False\n",
@@ -799,9 +799,9 @@
     ")\n",
     "print(f'{hyperpartisan_most_relevant_words_not_inf_on_bigrams} \\n\\n')\n",
     "\n",
-    "non_hyperpartisan_most_relevant_words_on_bigrams = (log_odd_ratios_analyzer.get_most_relevant_words(document_type=DocumentType.NON_HYPERPARTISAN))\n",
+    "non_hyperpartisan_most_relevant_words_on_bigrams = (log_odd_ratios_analyzer_on_bigrams.get_most_relevant_words(document_type=DocumentType.NON_HYPERPARTISAN))\n",
     "print(f'{non_hyperpartisan_most_relevant_words_on_bigrams} \\n')\n",
-    "non_hyperpartisan_most_relevant_words_not_inf_on_bigrams = (log_odd_ratios_analyzer.\n",
+    "non_hyperpartisan_most_relevant_words_not_inf_on_bigrams = (log_odd_ratios_analyzer_on_bigrams.\n",
     "    get_most_relevant_words(\n",
     "        document_type=DocumentType.NON_HYPERPARTISAN,\n",
     "        infinite_values=False\n",
@@ -812,8 +812,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-05T11:28:19.505658Z",
-     "start_time": "2024-04-05T11:27:17.074051Z"
+     "end_time": "2024-04-05T12:59:58.094693Z",
+     "start_time": "2024-04-05T12:58:59.574544Z"
     }
    },
    "id": "42d458f98893a2cc",
@@ -828,16 +828,6 @@
     "collapsed": false
    },
    "id": "e573ac7207e0f4b9"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## 3. Results Analysis"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "217dd566808c4059"
   }
  ],
  "metadata": {
